# 15721-s24-ee1

./: .gitignore  .gitmodules  Cargo.toml  README.md  plan.txt
.github/workflows/: build.yml
async-bpm-eviction/src/: bpm.rs
async-bpm-eviction/src/page/: eviction.rs  page_handle.rs
data/: customer.csv  dbgen  part.csv  supplier.csv
eggstrain/: Cargo.toml  log  substrait_plan_example.json
eggstrain/src/: lib.rs  main.rs
eggstrain/src/execution/: mod.rs  query_dag.rs  record_buffer.rs  record_table.rs
eggstrain/src/execution/operators/: aggregate.rs  filter.rs  forward_toy.rs  hash_join.rs  mod.rs  order_by.rs  project.rs  sort.rs  table_scan.rs
eggstrain/src/execution/operators/aggregate/: datafusion_aggregate.rs  mod.rs  operator.rs
eggstrain/src/execution/operators/aggregate/group_values/: primitive.rs  row.rs
eggstrain/src/execution/substrait/: deserialize.rs  example.rs  mod.rs  substrait_arrow.rs
eggstrain/src/execution/tests/: mod.rs
eggstrain/src/execution/tests/toy_forward_example/: bad_dag.rs  forward_toy.rs  mod.rs
eggstrain/src/scheduler_client/: mod.rs
eggstrain/src/storage_client/: mod.rs
name_tbd/: Cargo.toml
proposal/: 15721-project.json  final-presentation.html  final-presentation.md  final_designdoc.md  presentation.html  presentation.md  presentation2.html  presentation2.md  proposal.md
queries/: TPCHQ1.sql  basic_aggregate.sql  basic_filter.sql  basic_project.sql  basic_sort.sql  filter_project_sort.sql
substrait/: basic_query.json  examples.md  read_rel_example.json  substrait_plan_example.json
