[package]
name = "eggstrain"
version = "0.1.0"
edition = "2021"
authors = [
    "Connor Tsui (cjtsui)",
    "Sarvesh Tandon (sarvesht)",
    "Kyle Booker (kbooker)",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = "50"
async-trait = "0.1"
datafusion = "35"
datafusion-common = "35"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rayon = "1"
