[package]
name = "eggstrain"
version = "0.1.0"
edition = "2021"
authors = [
    "Connor Tsui (cjtsui)",
    "Sarvesh Tandon (sarvesht)",
    "Kyle Booker (kbooker)",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = { version = "50", default-features = false }
async-trait = "0.1"
datafusion = { version = "36", default-features = false }
datafusion-common = { version = "36", default-features = false }
futures = "0.3"
serde_json = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
rayon = "1"
